css/dewslandslide/public_alert/timelinev1.css
/****
 *
 *  Created by Kevin Dhale dela Cruz
 *  CSS file for Individual Monitoring Event Page [public_alert/monitoring_events_individual.php]
 *  [host]/public_alert/monitoring_events/[release_id]
 *  
****/

#map-canvas { 
    width: 375px !important;
    min-width: 0% !important;
    max-width: 30% !important;
    height: 450px !important;
    background-color: blue;
    position: fixed;
    top: 248px;
    margin: 0 0 0 10px;
}

#map { height: 100%; }

#reveal {
    line-height: 1.25em;
    font-size: 20px;
    font-weight: 600;
    position: fixed;
    top: 80px;
    left: 100vh - 100px; //65px;
    z-index: 0;
}

#reveal small { font-size: 16px; }

#bread {
    font-weight: 600;
    position: fixed;
    top: 200px;
    left: 100vh - 80px; //80px;
    z-index: 0;
}

#header { background-color: white; z-index: 1; }

.highlight {
    border: 8px solid black !important;
    outline: none !important;
    border-color: #0577ff !important;
    box-shadow: 0 0 15px #0d49eb !important;
}

hr { margin: 10px 0 10px; }

.timeline {
    list-style: none;
    /*padding: 20px 0 20px;*/
    padding: 0;
    position: relative;
}

#timeline-column-left .timeline:before {
    top: 0;
    bottom: 0;
    position: absolute;
    content: " ";
    width: 3px;
    background-color: #eeeeee;
    left: 103%;
    margin-left: -1.5px;
}

#timeline-column-right .timeline:before {
    top: 0;
    bottom: 0;
    position: absolute;
    content: " ";
    width: 3px;
    background-color: #eeeeee;
    left: -2.5%;
    margin-left: -1.5px;
}

.timeline > li {
    margin-bottom: 20px;
    position: relative;
}

    .timeline > li:before,
    .timeline > li:after {
        content: " ";
        display: table;
    }

    .timeline > li:after {
        clear: both;
    }

    .timeline > li:before,
    .timeline > li:after {
        content: " ";
        display: table;
    }

    .timeline > li:after {
        clear: both;
    }

    .timeline > li > .timeline-panel {
        width: 100%;
        float: left;
        border: 1px solid #d4d4d4;
        border-radius: 2px;
        padding: 20px 0px 8px 0px;
        position: relative;
        -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
    }

        .timeline > li > .timeline-panel:before {
            position: absolute;
            top: 26px;
            right: -15px;
            display: inline-block;
            border-top: 15px solid transparent;
            border-left: 15px solid #ccc;
            border-right: 0 solid #ccc;
            border-bottom: 15px solid transparent;
            content: " ";
        }

        .timeline > li > .timeline-panel:after {
            position: absolute;
            top: 27px;
            right: -14px;
            display: inline-block;
            border-top: 14px solid transparent;
            border-right: 0 solid #fff;
            border-bottom: 14px solid transparent;
            content: " ";
        }

        .timeline > li > .timeline-panel.ewi-card:after {
            border-left: 14px solid #F8991D;
        }

        .timeline > li.timeline-inverted > .timeline-panel.narrative-card:after {
            border-right: 14px solid #989898;
        }        

        .timeline > li.timeline > .timeline-panel.eos-card:after {
            border-left: 14px solid #16526D;
        }      

        .timeline > li > .timeline-badge {
            color: #fff;
            width: 50px;
            height: 50px;
            line-height: 50px;
            font-size: 1.4em;
            text-align: center;
            position: absolute;
            top: 16px;
            left: 47%;
            margin-left: -25px;
            background-color: #999999;
            z-index: 100;
            border-top-right-radius: 50%;
            border-top-left-radius: 50%; 
            border-bottom-right-radius: 50%;
            border-bottom-left-radius: 50%;
        }

        .timeline > li.timeline-inverted > .timeline-panel.narrative-card {
            float: right;
            padding: 10px 0px 8px 0px;
        }

        .timeline > li.timeline-inverted > .timeline-panel:before {
            border-left-width: 0;
            border-right-width: 15px;
            left: -15px;
            right: auto;
            top: 0px;
        }

        .timeline > li.timeline-inverted > .timeline-panel:after {
            border-left-width: 0;
            border-right-width: 14px;
            left: -14px;
            right: auto;
            top: 0px;
        }

.timeline-badge.primary {
    background-color: #2e6da4 !important;
}

.timeline-badge.success {
    background-color: #3f903f !important;
}

.timeline-badge.warning {
    background-color: #f0ad4e !important;
}

.timeline-badge.danger {
    background-color: #d9534f !important;
}

.timeline-badge.info {
    background-color: #5bc0de !important;
}

.timeline-title {
    margin-top: 0;
    color: inherit;
}

.timeline-body > p,
.timeline-body > ul {
    margin-bottom: 0;
}

.timeline-body > p + p {
    margin-top: 5px;
}

@media (max-width: 767px) {
    ul.timeline:before {
        left: 40px;
    }

    ul.timeline > li > .timeline-panel {
        width: calc(100% - 90px);
        width: -moz-calc(100% - 90px);
        width: -webkit-calc(100% - 90px);
    }

    ul.timeline > li > .timeline-badge {
        left: 15px;
        margin-left: 0;
        top: 16px;
    }

    ul.timeline > li > .timeline-panel {
        float: right;
    }

        ul.timeline > li > .timeline-panel:before {
            border-left-width: 0;
            border-right-width: 15px;
            left: -15px;
            right: auto;
        }

        ul.timeline > li > .timeline-panel:after {
            border-left-width: 0;
            border-right-width: 14px;
            left: -14px;
            right: auto;
        }
}

.timeline-body li { font-weight: 600; }

.number { padding-right: 0; }

.area_label { top: 12px; }

.line { margin-top: -5px; margin-bottom: 5px; }

.triggers {
    font-size: 14px;
    color: red;
    text-shadow: 0.5px 0.4px grey;
}

#h3_area { margin-left: 70px; }

#h3_area h3 {
    margin: 24px 0px 22px 0px; 
    background-color: rgba(128, 128, 128, 0.49);
}

.bootstrap-tagsinput {
  min-width: 100%;
  font-size: 16px;
}

/*** BULLETIN ***/

.text-area {
    margin: 0.5in;
}

.center-text {
    text-align: center;
}

#phivolcs, #dost{
    width: 66px; //165px*0.50
    height: 77.6px; //194px*0.50
}

#header-text div {
    margin: 0;
}

#header-text > div:nth-child(1) {
    font-size: 10px;
    font-weight: bold;
    color: blue;
}

#header-text > div:nth-child(2) {
    font-size: 12px;
    font-weight: bold;
    color: red !important;
}

#header-text > div:nth-child(3) {
    font-size: 16px;
    font-weight: bold;
    color: #000080 !important;
}

#header-text > div:nth-child(4), #header-text > :nth-child(5), #header-text > :nth-child(6), #header-text > :nth-child(7) {
    font-size: 8px;
    color: blue !important;
}

#title {
    margin-top: 10px;
    margin-bottom: 10px;
}

#bulletinModal h2 {
    font-size: 20px;
}

/*.panel-default {
    border-color: black;
}*/

#bulletin, #areaSituation, #footer {
    font-size: 16px;
}

#bulletin .row {
    margin: 8px 0;
}

#areaSituation .row {
    margin: 15px 0;
}

#bulletin .col-sm-8 {
    padding-left: 0;
    font-weight: bold;
}

#areaSituation h3 {
    font-size: 18px;
    margin-top: 0;
}

#areaSituation p {
    text-indent: 60px;
}

.rowIndent {
    padding-left: 60px;
}

#footer {
    margin-top: 15px;
}

#info {
    font-size: 18px;
    font-weight: bold;
}

#bulletinModal .modal-body { padding-bottom: 0; }
#resultModal .modal-body { font-size: 14px; }

h3.popover-title { font-weight: bold; font-size: 16px!important; background: #C0C0C0; }
.popover-content { background: #A9A9A9; }
#reminder { font-size: 13px; color: red; font-weight: bold; }

/*New Styles*/

.number-box {
    display: inline;
    float: left;
    padding: 10px;
    font-size: 35px;
    line-height: 35px;
    font-weight: 600;
    background: rgba(0, 0, 0, 0.17);    
}

.number-box-narrative {
    display: inline;
    float: left;
    padding: 10px;
    font-size: 12px;
    line-height: 3px;
    font-weight: 600;
    background: rgba(0, 0, 0, 0.17); 
}

.timeline-heading {
    margin-bottom: 15px;
    color: white;
    padding-left: 20px;
    padding-right: 20px;    
}

.ewi-card {
    background-color: #F8991D;
}

.narrative-title {
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: 600;
    letter-spacing: 1.5px;
    margin: 0;
    padding-top: 10px;
    line-height: 0rem;
    padding-left: 0px;
}

.narrative-card {
    background-color: #989898;
    padding-top: 10px;
}

.narrative-card > .timeline-heading {
    margin-bottom: 8px;
}

.narrative-card > .timeline-body {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.narrative-span {
    font-style: italic;
}

.eos-card {
    background-color: #16526D;
}

.timeline-body {
    background-color: white;
    padding: 12px 20px 20px;
    margin-right: -0.25px;
    margin-left: 0.1px;
}

.head-column {
    padding-right: 0px;
    padding-left: 30px;
}

.head {
  text-transform: uppercase;
  font-size: 2.2rem;
  font-weight: 600;
  letter-spacing: 0.5px;
  margin: 0;
  padding-top: 10px;
  line-height: 2.2rem;
}

.head span.card-title {
  display: block;
  font-size: 1.3rem;
  margin: 0;
  font-weight: 600;
}

.fa.fa-edit {
    padding-top: 15px;
    font-size: 20px;
}

.page-header {
    font-size: 25px;
    font-weight: 600;
    color: #17526D;
    border: solid #17526D;
    border-radius: 6px;
    margin-bottom: 20px;    

    box-sizing: border-box;
    text-align: center;
    display: block;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    padding-bottom: 0px;
}

.container-line.timeline-head {
    margin-top: 30px;
    margin-bottom: 40px;
}

.container-line {
    margin-top: 20px;
    margin-bottom: 20px;
    height: 3px;
    background-color: #17526D;
    position: relative;
}

.circle {
    display: inline-block;
    vertical-align: middle;
    width: 15px;
    height: 15px;
    background-color: #17526D;
    border: solid 1px #17526D;
    border-radius: 50%;
    position: absolute;
    top: -6px;
}

.base-section-div-text, .container-line-text.timeline-head-text, .container-line-text.tab-head-text, .container-line-text.section-head-text {
    font-size: 22px;
    font-weight: 600;
    padding: 0 10px;
}
.container-line-text.timeline-head-text {
    top: -18px;
    left: calc(50% - 35px);
}
.container-line-text {
    display: inline-block;
    vertical-align: middle;
    color: #17526D;
    border: solid 3px #17526D;
    border-radius: 6px;
    position: absolute;
    background-color: white;
}

.left {
    left: 0;
}

.right {
    right: 0;
}

